--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ img{
 
 				<!-- <img src=image/aqi.png width="70%" > -->
 			
-		<div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
+		<!-- <div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
 		<div id="panel">
 			<center><table style="width:100%;">
 					<tr bgcolor="#FFFFFF">
@@ -600,7 +600,7 @@ img{
 					</tr>
 				  </table></center>
 				
-				</div>
+				</div> -->
 				<!-- <center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
 				<br>
 				<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center> -->
