--- a/index.html
+++ b/index.html
@@ -495,6 +495,10 @@ img{
 
 
 </style>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ChartJs</title>
 </head>
 
 <body>
