--- a/index.html
+++ b/index.html
@@ -502,7 +502,6 @@ img{
 </head>
 
 <body>
-		<canvas id="myChart" width="400" height="400"></canvas>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
 		<script>
 				var ctx = document.getElementById("myChart");
@@ -660,6 +659,11 @@ img{
 		<div class="row">
 			<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div></center>
 		</div> 
+		<br>
+		<div class="row">
+				<canvas id="myChart" style="height:300px; width: 70%"></canvas>
+		</div> 
+		
 
     </div>
 	</div>
