--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ img{
 		<script>
 				var ctx = document.getElementById("myChart");
 				var myChart = new Chart(ctx, {
-					type: 'bar',
+					type: 'line',
 					data: {
 						labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
 						datasets: [{
