--- a/index.html
+++ b/index.html
@@ -505,9 +505,8 @@ img{
 		
   <div class="container">
 	  <br>
-    <p><FONT SIZE = 5><b>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></b></FONT></p>
-    <!-- <hr /> -->
-     
+	<ul><li><a href="#overview">Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></a></li></ul>
+    <!-- <p><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></p> -->     
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
