--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ img{
 		
   <div class="container">
 	  <br>
-	<ul><li><a href="#overview">Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></a></li></ul>
+	<ul><li><a href="index.html">Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></a></li></ul>
     <!-- <p><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></p> -->     
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
