--- a/index.html
+++ b/index.html
@@ -505,8 +505,7 @@ img{
 		
   <div class="container">
 	  <br>
-	<ul><li><a href="index.html">Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></a></li></ul>
-    <!-- <p><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></p> -->     
+    <a href="index.html"><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></a>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
