--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ img{
 		
   <div class="container">
 	  <br>
-	<a href="index.html"><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></a>
+	<a style="color:#696969;" href="index.html"><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></a>
 	<br>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
