--- a/index.html
+++ b/index.html
@@ -620,13 +620,13 @@ img{
 		<div class="row">
 			<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div></center>
 		</div> 
-		<br>
-		<div class="row">
+		<!-- <br> -->
+		<!-- <div class="row">
 		<canvas id="myChart" style="height:300px; width: 70%"></canvas>
 
 		
 
-    </div>
+    </div> -->
 	</div>
 		
   </div>
