--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@ td{
 #panel {
   padding: 50px;
   display: none;
-  }
+  box-shadow: 10px 10px 55px 10px rgba(0, 0, 0, 0.4);
+}
 
 img{
 	pointer-events: none;
