--- a/index.html
+++ b/index.html
@@ -627,11 +627,16 @@ img{
 
 		
 
-    </div> -->
+	</div> -->
+	
 	</div>
 		
   </div>
   </div>
+  <ul class="nav nav-tabs" role="tablist">
+		<li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
+		<li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
+	</ul> 
 </body>
 
 
