--- a/index.html
+++ b/index.html
@@ -632,10 +632,13 @@ img{
 	</div>
 		
   </div>
+  <footer>
+	  <br>
   <ul class="nav nav-tabs" role="tablist">
 		<li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
 		<li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
+</footer>
   </div>
  
 </body>
