--- a/index.html
+++ b/index.html
@@ -634,10 +634,7 @@ img{
   </div>
   <footer>
 	  <br>
-  <ul class="nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
-		<li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
-	</ul> 
+  <a><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a>
 </footer>
   </div>
  
