--- a/index.html
+++ b/index.html
@@ -634,7 +634,9 @@ img{
   </div>
   <footer>
 	  <br>
-  <a><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a>
+  <ul class="nav nav-tabs">
+		Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1
+	</ul> 
 </footer>
   </div>
  
