--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ img{
   </div>
   <footer>
 	  <br>
-  <ul class="nav nav-tabs" role="tablist">
+  <ul class="nav nav-tabs" >
 		<li class="active"><a aria-controls="home" role="tab" data-toggle="tab"><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a></li>
 	</ul> 
 </footer>
