--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Temperature &amp; Dust Detector Dashboard | Yodsarun</title>
+<title>Temperature &amp; Dust Detector Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- jQuery -->
@@ -507,7 +507,7 @@ img{
 		
   <div class="container">
 	  <br>
-	<a href="index.html"><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></FONT></a>
+	<a href="index.html"><FONT SIZE = 5>Temperature &amp; <small>Dust Detector Dashboard</small></FONT></a>
 	<br>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
