--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ img{
   <footer>
 	  <br>
   <ul class="nav nav-tabs" >
-		<li class="active"><a aria-controls="home" role="tab" data-toggle="tab"><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a></li>
+		<li class="active"><a aria-controls="home" ><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a></li>
 	</ul> 
 </footer>
   </div>
