--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ img{
   <footer>
 	  <br>
   <ul class="nav nav-tabs" >
-		<li class="active"><a aria-controls="home" ><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a></li>
+		<li><a aria-controls="home" ><b>Developed by Yodsarun Pongda </b>| Location at Soi Phutthabucha 44 / 1</a></li>
 	</ul> 
 </footer>
   </div>
