--- a/index.html
+++ b/index.html
@@ -477,21 +477,19 @@ td{
 }
 
 #panel, #flip {
-  padding: 5px;
+  /* padding: 5px; */
   text-align: center;
   background-color: #DDDDDD	;
   border: solid 1px #777777;
 }
 
 #panel {
-  padding: 50px;
+  /* padding: 50px; */
   display: none;
   box-shadow: 10px 10px 55px 10px rgba(0, 0, 0, 0.4);
 }
 
-img{
-	pointer-events: none;
-}
+
 
 
 
@@ -565,7 +563,7 @@ img{
 			
 		<div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
 		<div id="panel">
-			<center><table style="width:100%;">
+			<center><table>
 					<tr bgcolor="#FFFFFF">
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
