--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@ td{
 #panel, #flip {
   /* padding: 5px; */
   text-align: center;
-  background-color: #DDDDDD	;
-  border: solid 1px #777777;
+  /* background-color: #DDDDDD	; */
+  /* border: solid 1px #777777; */
 }
 
 #panel {
