--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@ td{
 }
 
 #panel, #flip {
-  /* padding: 5px; */
+  padding: 5px;
   text-align: center;
-  /* background-color: #DDDDDD	; */
-  /* border: solid 1px #777777; */
+  background-color: #DDDDDD	;
+  border: solid 1px #777777;
 }
 
 #panel {
-  /* padding: 50px; */
+  padding: 50px;
   display: none;
   box-shadow: 10px 10px 55px 10px rgba(0, 0, 0, 0.4);
 }
