--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@ td{
 
 				<!-- <img src=image/aqi.png width="70%" > -->
 			
-		<div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
+		<div id="flip"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
 		<div id="panel">
-			<center><table>
+			<table>
 					<tr bgcolor="#FFFFFF">
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
@@ -604,7 +604,7 @@ td{
 						<td width="15%"><center>มากกว่า 181</center></td>
 						<td width="55%">ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
 					</tr>
-				  </table></center>
+				  </table>
 				
 				</div>
 				<!-- <center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
