--- a/index.html
+++ b/index.html
@@ -629,6 +629,8 @@ td{
 
 	</div> -->
 	<div>
+			<canvas id="myChart" width="400" height="400"></canvas>
+
 		<script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
