--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ td{
 		
 
 	</div> -->
-	<div>
+	<!-- <div>
 			<canvas id="myChart" width="400" height="400"></canvas>
 
 		<script>
@@ -670,7 +670,7 @@ td{
 				}
 			});
 			</script>
-	</div>
+	</div> -->
 	
 	</div>
 		
