--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 var chart, toOffline;
 var chart2;
 var chart3;
+var vpm1 = [],vpm25=[],vpm10=[];
 var newItems = false;
 // Initialize Firebase
 var config = {
@@ -200,6 +201,10 @@ function toogleDataSeries(e){
 		chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
 		chart2.render();
 
+		vpm1.push(row.pm1);
+		vpm25.push(row.pm25);
+		vpm10.push(row.pm10);
+
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		$("#pm1 > .content").html(row.pm1 + " <small>ug/m3</small>");
@@ -277,6 +282,9 @@ function toogleDataSeries(e){
 			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});	
 			lastRows = row;
+			vpm1.push(row.pm1);
+			vpm25.push(row.pm25);
+			vpm10.push(row.pm10);
 		});
 		chart.render();
 		var length = chart2.options.data[0].dataPoints.length;
@@ -633,31 +641,32 @@ td{
 		<script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
-				type: 'bar',
-				data: {
-					// labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-					datasets: [{
-						label: '# of Votes',
-						data: [12, 19, 3, 5, 2, 3],
-						backgroundColor: [
-							'rgba(255, 99, 132, 0.2)',
-							'rgba(54, 162, 235, 0.2)',
-							'rgba(255, 206, 86, 0.2)',
-							'rgba(75, 192, 192, 0.2)',
-							'rgba(153, 102, 255, 0.2)',
-							'rgba(255, 159, 64, 0.2)'
-						],
-						borderColor: [
-							'rgba(255,99,132,1)',
-							'rgba(54, 162, 235, 1)',
-							'rgba(255, 206, 86, 1)',
-							'rgba(75, 192, 192, 1)',
-							'rgba(153, 102, 255, 1)',
-							'rgba(255, 159, 64, 1)'
-						],
-						borderWidth: 1
-					}]
-				},
+				type: 'line',
+				data: vpm1,
+				// {
+				// 	// labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+				// 	// datasets: [{
+				// 	// 	label: '# of Votes',
+				// 	// 	data: [12, 19, 3, 5, 2, 3],
+				// 	// 	backgroundColor: [
+				// 	// 		'rgba(255, 99, 132, 0.2)',
+				// 	// 		'rgba(54, 162, 235, 0.2)',
+				// 	// 		'rgba(255, 206, 86, 0.2)',
+				// 	// 		'rgba(75, 192, 192, 0.2)',
+				// 	// 		'rgba(153, 102, 255, 0.2)',
+				// 	// 		'rgba(255, 159, 64, 0.2)'
+				// 	// 	],
+				// 	// 	borderColor: [
+				// 	// 		'rgba(255,99,132,1)',
+				// 	// 		'rgba(54, 162, 235, 1)',
+				// 	// 		'rgba(255, 206, 86, 1)',
+				// 	// 		'rgba(75, 192, 192, 1)',
+				// 	// 		'rgba(153, 102, 255, 1)',
+				// 	// 		'rgba(255, 159, 64, 1)'
+				// 	// 	],
+				// 	// 	borderWidth: 1
+				// 	// }]
+				// },
 				options: {
 					scales: {
 						yAxes: [{
