--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function toogleDataSeries(e){
 			$("#status > .content").text("loading...");
 		}
 
-		if(row.pm25 >=0 || row.pm25 <=25)
+		if(row.pm25 >=0 && row.pm25 <=25)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -234,7 +234,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("verygood");
 		}
-		else if(row.pm25 >=26 || row.pm25 <=37)
+		else if(row.pm25 >=26 && row.pm25 <=37)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("verygood")
@@ -243,7 +243,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("good");
 		}
-		else if(row.pm25 >=38 || row.pm25 <=50)
+		else if(row.pm25 >=38 && row.pm25 <=50)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -252,7 +252,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("mediam");
 		}
-		else if(row.pm25 >=51 || row.pm25 <=90)
+		else if(row.pm25 >=51 && row.pm25 <=90)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -261,7 +261,7 @@ function toogleDataSeries(e){
 			.removeClass("verygood")
 			.addClass("bad");
 		}
-		else
+		else if(row.pm25 > 90)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -272,7 +272,7 @@ function toogleDataSeries(e){
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
-		if(row.pm10 >=0 || row.pm10 <=50)
+		if(row.pm10 >=0 && row.pm10 <=50)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -282,7 +282,7 @@ function toogleDataSeries(e){
 			.addClass("verygood");
 			//$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
-		else if(row.pm10 >=51 || row.pm10 <=80)
+		else if(row.pm10 >=51 && row.pm10 <=80)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("verygood")
@@ -292,7 +292,7 @@ function toogleDataSeries(e){
 			.addClass("good");
 			//$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
-		else if(row.pm10 >=81 || row.pm10 <=120)
+		else if(row.pm10 >=81 && row.pm10 <=120)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -302,7 +302,7 @@ function toogleDataSeries(e){
 			.addClass("mediam");
 			//$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
-		else if(row.pm10 >=121 || row.pm10 <=180)
+		else if(row.pm10 >=121 && row.pm10 <=180)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -312,7 +312,7 @@ function toogleDataSeries(e){
 			.addClass("bad");
 			// $("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
-		else
+		else if(row.pm10 > 180)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -372,7 +372,7 @@ function toogleDataSeries(e){
 			$("#status > .content").html("Updating...");   // ต่อ แต่ไม่มีไอเทม
 		}
 
-		if(Arow.pm25 >=0|| Arow.pm25 <=25)
+		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -381,7 +381,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("verygood");
 		}
-		else if(Arow.pm25 >=26 || Arow.pm25 <=37)
+		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("verygood")
@@ -390,7 +390,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("good");
 		}
-		else if(Arow.pm25 >=38 || Arow.pm25 <=50)
+		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -399,7 +399,7 @@ function toogleDataSeries(e){
 			.removeClass("bad")
 			.addClass("mediam");
 		}
-		else if(Arow.pm25 >=51 || Arow.pm25 <=90)
+		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -408,7 +408,7 @@ function toogleDataSeries(e){
 			.removeClass("verygood")
 			.addClass("bad");
 		}
-		else 
+		else if(Arow.pm25 > 90)
 		{
 			$("#pm25").removeClass("loading")
 			.removeClass("good")
@@ -419,7 +419,7 @@ function toogleDataSeries(e){
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
-		if(Arow.pm10 >=0 || Arow.pm10 <=50)
+		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -429,7 +429,7 @@ function toogleDataSeries(e){
 			.addClass("verygood");
 			//$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
-		else if(Arow.pm10 >=51 || Arow.pm10 <=80)
+		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("verygood")
@@ -439,7 +439,7 @@ function toogleDataSeries(e){
 			.addClass("good");
 			//$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
-		else if(Arow.pm10 >=81 || Arow.pm10 <=120)
+		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -449,7 +449,7 @@ function toogleDataSeries(e){
 			.addClass("mediam");
 			//$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
-		else if(Arow.pm10 >=121 || Arow.pm10 <=180)
+		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
@@ -459,7 +459,7 @@ function toogleDataSeries(e){
 			.addClass("bad");
 			// $("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
-		else
+		else if(Arow.pm10 > 180)
 		{
 			$("#pm10").removeClass("loading")
 			.removeClass("good")
