--- a/index.html
+++ b/index.html
@@ -224,98 +224,108 @@ function toogleDataSeries(e){
 
 		if(row.pm25 >=0 && row.pm25 <=25)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("verygood");
 		}
 		else if(row.pm25 >=26 && row.pm25 <=37)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("verygood")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("verygood")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("good");
 		}
 		else if(row.pm25 >=38 && row.pm25 <=50)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("verygood")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("verygood")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("mediam");
 		}
 		else if(row.pm25 >=51 && row.pm25 <=90)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("verygood")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("verygood")
 			.addClass("bad");
 		}
 		else if(row.pm25 > 90)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("bad")
-			.removeClass("verygood")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("bad")
+			// .removeClass("verygood")
 			.addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(row.pm10 >=0 && row.pm10 <=50)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("verygood");
 			//$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
 		else if(row.pm10 >=51 && row.pm10 <=80)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("verygood")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("verygood")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("good");
 			//$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
 		else if(row.pm10 >=81 && row.pm10 <=120)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("verygood")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("verygood")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("mediam");
 			//$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
 		else if(row.pm10 >=121 && row.pm10 <=180)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("verygood")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("verygood")
 			.addClass("bad");
 			// $("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
 		else if(row.pm10 > 180)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("bad")
-			.removeClass("verygood")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("bad")
+			// .removeClass("verygood")
 			.addClass("verybad");
 			// $("#pm10").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
 		}
@@ -371,94 +381,105 @@ function toogleDataSeries(e){
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
-			.addClass("verygood");
+			$("#pm25").addClass("verygood");
+
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 		}
 		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("verygood")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("verygood")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("good");
 		}
 		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("verygood")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("verygood")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("mediam");
 		}
 		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("verygood")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("verygood")
 			.addClass("bad");
 		}
 		else if(Arow.pm25 > 90)
 		{
-			$("#pm25").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("bad")
-			.removeClass("verygood")
+			$("#pm25")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("bad")
+			// .removeClass("verygood")
 			.addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("verygood");
 			//$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
 		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("verygood")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("verygood")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("good");
 			//$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
 		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("verygood")
-			.removeClass("verybad")
-			.removeClass("bad")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("verygood")
+			// .removeClass("verybad")
+			// .removeClass("bad")
 			.addClass("mediam");
 			//$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
 		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
-			$("#pm10").removeClass("loading")
-			.removeClass("good")
-			.removeClass("mediam")
-			.removeClass("verybad")
-			.removeClass("verygood")
+			$("#pm10")
+			// .removeClass("loading")
+			// .removeClass("good")
+			// .removeClass("mediam")
+			// .removeClass("verybad")
+			// .removeClass("verygood")
 			.addClass("bad");
 			// $("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
 		else if(Arow.pm10 > 180)
 		{
-			$("#pm10").removeClass("loading").removeClass("good").removeClass("mediam").removeClass("bad").removeClass("verygood").addClass("verybad");
+			$("#pm10")
+			// .removeClass("loading").removeClass("good").removeClass("mediam").removeClass("bad").removeClass("verygood")
+			.addClass("verybad");
 			// $("#pm10").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
 		}
 	
